--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "turali.js.org",
-  "name": "Çağlar Turalı",
+  "name": "Shubha Banerjee",
   "icons": [
     {
       "src": "images/favicon.png",
