--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "iamshubha.github.io",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://iamshubha.github.io/iamshubha.github.io",
+  "homepage": "https://iamshubha.github.io/",
   "dependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/jest-dom": "^5.17.0",
